Test update - README changes and removed test file

--- a/v2/maze.html
+++ b/v2/maze.html
@@ -45,7 +45,7 @@
     <div id="reticle">+</div>
 
     <!-- Version Info -->
-    <div id="versionInfo">v1.47e</div> <!-- Match JS Version -->
+    <div id="versionInfo">v1.47f</div> <!-- Match JS Version -->
 
     <!-- Damage Overlay Element -->
     <div id="damageOverlay"></div>
@@ -77,14 +77,17 @@
 
     <!-- Load YOUR game modules from js/ folder WITHOUT defer -->
     <!-- Order matters -->
+    <script src="js/constants.js"></script>      <!-- Load Constants FIRST -->
     <script src="js/audio.js"></script>
-    <script src="js/environment.js"></script>
-    <script src="js/player.js"></script>
-    <!-- <script src="js/agents.js"></script> -->       <!-- To be created -->
-    <!-- <script src="js/rabbits.js"></script> -->      <!-- To be created -->
-    <!-- <script src="js/shooting.js"></script> -->     <!-- To be created -->
-    <!-- <script src="js/ui.js"></script> -->           <!-- To be created -->
-    <!-- <script src="js/game_state.js"></script> -->  <!-- To be created -->
+    <script src="js/environment.js"></script>   <!-- Defines scene/camera/maze creation -->
+    <script src="js/player.js"></script>        <!-- Defines player controls/actions -->
+
+    <!-- Placeholder Stubs (Create these files empty in js/ for now if they don't exist) -->
+    <script src="js/shooting.js"></script>      <!-- Will contain gun/bullet logic -->
+    <script src="js/agents.js"></script>        <!-- Will contain agent logic -->
+    <script src="js/rabbits.js"></script>       <!-- Will contain rabbit logic -->
+    <script src="js/ui.js"></script>            <!-- Will contain HUD/Menu logic -->
+    <script src="js/game_state.js"></script>   <!-- Will contain win/lose logic -->
 
     <!-- Load main entry point LAST -->
     <script src="js/main.js"></script>
